<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <TextView
            android:id="@+id/textView97"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/avantgarde_bold"
            android:text="@string/no_result"
            android:textColor="@color/txt_clr_blue"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/textView101"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/textView101"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/avantgarde_regular"
            android:text="@string/no_product_found"
            android:textColor="@color/txt_clr_blue"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@+id/tvContinueShopping"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView97"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/tvContinueShopping"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@color/txt_clr_blue"
            android:fontFamily="@font/avantgarde_bold"
            android:paddingLeft="32dp"
            android:paddingTop="8dp"
            android:paddingRight="32dp"
            android:paddingBottom="8dp"
            android:text="@string/continue_shopping"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView101"
            app:layout_constraintVertical_chainStyle="packed" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>