<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!--        <androidx.recyclerview.widget.RecyclerView-->
        <!--            android:id="@+id/recyclerViewMainCategories"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="match_parent"-->
        <!--            android:orientation="vertical"-->
        <!--            android:visibility="gone"></androidx.recyclerview.widget.RecyclerView>-->


        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:adjustViewBounds="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/image_select_main_category" />

        <Button
            android:id="@+id/btnSelectKids"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:background="@drawable/white_rounded_rectangle_16dp"
            android:fontFamily="@font/futura_medium"
            android:paddingLeft="32dp"
            android:paddingRight="32dp"
            android:text="@string/shop_kids"
            android:textColor="@color/txt_clr_blue"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/btnSelectWomen"
            app:layout_constraintStart_toStartOf="@+id/btnSelectWomen" />

        <Button
            android:id="@+id/btnSelectMen"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/white_rounded_rectangle_16dp"
            android:fontFamily="@font/futura_medium"
            android:paddingLeft="32dp"
            android:paddingRight="32dp"
            android:text="@string/shop_men"
            android:textColor="@color/txt_clr_blue"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/btnSelectKids"
            app:layout_constraintEnd_toEndOf="@+id/btnSelectWomen"
            app:layout_constraintHorizontal_bias="0.46"
            app:layout_constraintStart_toStartOf="@+id/btnSelectWomen" />

        <Button
            android:id="@+id/btnSelectWomen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/white_rounded_rectangle_16dp"
            android:fontFamily="@font/futura_medium"
            android:paddingLeft="32dp"
            android:paddingRight="32dp"
            android:text="@string/shop_women"
            android:textColor="@color/txt_clr_blue"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/btnSelectMen"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>